<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_dashboard_bg"
    android:columnCount="4"
    android:paddingBottom="@dimen/common_8_dp"
    android:paddingTop="@dimen/common_8_dp">

    <com.vinhle.searchablespinner.SearchableSpinner
        android:id="@+id/item_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:maxEms="12"
        android:maxLines="1"
        app:hintText="@string/label_bill_product" />

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_bill_product_quantity"
            android:inputType="number"
            android:maxEms="12"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_cost_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_bill_price_unit"
            android:inputType="number"
            android:maxEms="12"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/label_bill_total_price"
            android:maxEms="12"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/btn_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:padding="@dimen/common_4_dp"
        android:text="@string/remove"
        android:textColor="@drawable/remove_text_color"
        android:textSize="@dimen/h4"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_note"
            android:maxEms="12"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>
</GridLayout>
