<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Header -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="@dimen/common_12_dp"
            android:text="@string/cancel"
            android:textColor="@drawable/request_text_color"
            android:textSize="@dimen/h4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bill_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="@dimen/common_12_dp"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/h4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:padding="@dimen/common_12_dp"
            android:text="@string/done"
            android:textColor="@drawable/request_text_color"
            android:textSize="@dimen/h4"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/common_8_dp"
        android:layout_marginRight="@dimen/common_8_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_dashboard_bg"
                android:columnCount="2"
                android:padding="@dimen/common_8_dp">

                <ImageView
                    android:layout_columnSpan="1"
                    android:layout_gravity="fill_horizontal|fill_vertical"
                    android:layout_rowSpan="2"
                    android:src="@drawable/ic_bill" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_product_code"
                    android:layout_column="1"
                    android:layout_gravity="fill_horizontal|fill_vertical">

                    <EditText
                        android:id="@+id/item_bill_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/label_bill_code"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/item_barcode"
                    android:layout_column="1"
                    android:layout_gravity="fill_horizontal|fill_vertical"
                    android:layout_marginTop="@dimen/common_8_dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal|fill_vertical">

                    <EditText
                        android:id="@+id/item_customer_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/label_bill_customer"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal|fill_vertical">

                    <EditText
                        android:id="@+id/item_customer_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/label_bill_customer_phone"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_customer_address"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal|fill_vertical">

                    <EditText
                        android:id="@+id/item_customer_address"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_address"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <com.vinhle.searchablespinner.SearchableSpinner
                    android:id="@+id/spinner_province"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal|fill_vertical"
                    android:maxLines="1"
                    app:hintText="@string/label_province" />

                <com.vinhle.searchablespinner.SearchableSpinner
                    android:id="@+id/spinner_district"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal|fill_vertical"
                    app:hintText="@string/label_district" />

                <com.vinhle.searchablespinner.SearchableSpinner
                    android:id="@+id/spinner_ward"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal|fill_vertical"
                    app:hintText="@string/label_ward" />

                <com.vinhle.searchablespinner.SearchableSpinner
                    android:id="@+id/spinner_store"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal|fill_vertical"
                    app:hintText="@string/label_bill_store" />

            </GridLayout>

            <TextView
                android:id="@+id/btn_add_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:clickable="true"
                android:padding="@dimen/common_12_dp"
                android:text="@string/label_bill_add_product"
                android:textColor="@drawable/request_text_color"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_8_dp"
                android:layout_marginTop="@dimen/common_8_dp"
                android:background="@drawable/item_dashboard_bg"
                android:columnCount="2"
                android:padding="@dimen/common_8_dp">

                <info.hoang8f.android.segmented.SegmentedGroup
                    android:id="@+id/item_bill_step"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal|fill_vertical"
                    android:layout_marginTop="@dimen/common_8_dp"
                    android:orientation="horizontal"
                    app:sc_border_width="2dp"
                    app:sc_corner_radius="10dp"
                    app:sc_tint_color="@color/colorPrimary">

                    <RadioButton
                        android:id="@+id/bill_step_propose"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_bill_step_propose" />

                    <RadioButton
                        android:id="@+id/bill_step_delivery"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_bill_step_delivery" />

                    <RadioButton
                        android:id="@+id/bill_step_received"
                        style="@style/RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_bill_step_received" />

                </info.hoang8f.android.segmented.SegmentedGroup>

                <android.support.design.widget.TextInputLayout
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal|fill_vertical"
                    android:layout_marginTop="@dimen/common_8_dp">

                    <EditText
                        android:id="@+id/item_bill_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_bill_note"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_returned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_16_dp"
                    android:background="@color/color_red"
                    android:padding="@dimen/common_8_dp"
                    android:text="@string/label_bill_returned"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />
            </GridLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>