<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_dashboard_bg"
    android:columnCount="4"
    android:paddingBottom="@dimen/common_8_dp"
    android:paddingTop="@dimen/common_8_dp">

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="4"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical" >

        <EditText
            android:id="@+id/item_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/label_bill_product"
            android:maxEms="12"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical" >

        <EditText
            android:id="@+id/item_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/label_bill_product_quantity"
            android:maxEms="12"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_returned_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_bill_product_returned_quantity"
            android:inputType="number"
            android:maxEms="12"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_refund_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_bill_product_refund_cost_unit"
            android:inputType="number"
            android:maxEms="12"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_refund_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/label_bill_product_refund_cost"
            android:maxEms="12"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_note"
            android:maxEms="12"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

</GridLayout>