<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_dashboard_bg"
    android:columnCount="4"
    android:paddingBottom="@dimen/common_8_dp"
    android:paddingTop="@dimen/common_8_dp">

    <com.vinhle.searchablespinner.SearchableSpinner
        android:id="@+id/item_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:maxEms="12"
        android:maxLines="1"
        app:hintText="@string/label_bill_product" />

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_bill_product_quantity"
            android:inputType="number"
            android:maxEms="12"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_price_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_bill_price_unit"
            android:inputType="number"
            android:maxEms="12"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/label_bill_total_price"
            android:maxEms="12"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/btn_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clickable="true"
        android:padding="@dimen/common_4_dp"
        android:text="@string/remove"
        android:textColor="@drawable/remove_text_color"
        android:textSize="@dimen/h4"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_note"
            android:maxEms="12"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/btn_returned_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_gravity="center_vertical|right"
        android:clickable="true"
        android:text="@string/label_bill_returned_detail"
        android:textColor="@color/color_gray"
        android:textSize="@dimen/h4"
        android:textStyle="italic" />

    <RelativeLayout
        android:id="@+id/btn_arrow_returned_detail"
        android:layout_width="@dimen/common_32_dp"
        android:layout_height="@dimen/common_32_dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <View
            android:layout_width="@dimen/common_12_dp"
            android:layout_height="@dimen/common_12_dp"
            android:background="@drawable/triangle_bg" />
    </RelativeLayout>

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/expand_bill_returned"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal|fill_vertical"
        android:layout_marginLeft="@dimen/common_24_dp"
        app:ael_duration="500"
        app:ael_expanded="false"
        app:ael_interpolator="linear" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/item_layout_returned_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <EditText
                    android:id="@+id/item_returned_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/label_bill_product_returned_quantity"
                    android:maxEms="12"
                    android:maxLines="1"
                    android:text="0" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <EditText
                    android:id="@+id/item_refund_cost_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/label_bill_product_refund_cost_unit"
                    android:maxEms="12"
                    android:maxLines="1"
                    android:text="0" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/item_refund_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/label_bill_product_refund_cost"
                    android:maxEms="12"
                    android:maxLines="1"
                    android:text="0" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

</GridLayout>