<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_24_dp"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_product_beginning_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/label_product_beginning_quantity"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal|fill_vertical">

        <EditText
            android:id="@+id/item_product_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/label_product_quantity"
            android:maxLines="1"
            android:text="0" />

    </android.support.design.widget.TextInputLayout>

    <info.hoang8f.android.segmented.SegmentedGroup
        android:id="@+id/item_product_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_8_dp"
        android:orientation="horizontal"
        app:sc_border_width="2dp"
        app:sc_corner_radius="10dp"
        app:sc_tint_color="@color/colorPrimary">

        <RadioButton
            android:id="@+id/active"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/active" />

        <RadioButton
            android:id="@+id/deactivate"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/deactivate" />

    </info.hoang8f.android.segmented.SegmentedGroup>

</LinearLayout>